--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="https://en.wikipedia.org/wiki/Klettgau">{{site.name}}</a></h1>
+            <h1 class="site-name"><a href="https://en.wikipedia.org/wiki/Klettgau">/{{site.name}}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
